fixed h-alignment of buttons component

--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -27,13 +27,15 @@
 }
 .rightSideNav {
   display: grid;
-  grid-template-columns: 0.2fr 0.8fr 0.5fr 0.8fr;
-  align-items: center;
-  gap: 0.5rem;
-}
-.rightSideNav > * {
+  grid-template-columns: 0.2fr 0.8fr 0.5fr .8fr;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
+}
+
+.btn {
+  display: flex;
+  justify-self: center;
 }
 
 .navBox ul {
@@ -50,9 +52,7 @@
   cursor: pointer;
 }
 
-
 @media screen and (min-width: 320px) and (max-width: 768px) {
-
   .navBarBoxLeft {
     grid-template-columns: 1fr;
     padding-left: 1.2rem;
@@ -71,5 +71,4 @@
     justify-content: center;
     align-items: center;
   }
-
 }
